--- a/reduction.tex
+++ b/reduction.tex
@@ -33,9 +33,9 @@
   \draw[->]					(reduction) -- (power);
   \draw[->]					(reduction) -- (shipments);
   \draw[->]					(reduction) -- (decay);
-  \draw[->]					(Li2O) -- (reduction);
-  \draw[->]					(porosity) -- (reduction);
-  \draw[->]					(current) -- (reduction);
+  \draw[-]					(Li2O) -- (reduction);
+  \draw[-]					(porosity) -- (reduction);
+  \draw[-]					(current) -- (reduction);
   \draw[->]					(reduction)++(0,2) -- (reduction) node[midway] {U$_3$O$_8$};
   \draw[->]					(reduction)++(-0.75,-2) -- ++(0,1.5) node[midway] {LiCl};
   \draw[->]					(reduction)++(0.75,-0.5) -- ++(0,-1.5) node[midway] {U+LiCl};
