--- a/volox.tex
+++ b/volox.tex
@@ -35,11 +35,11 @@
   \draw[->]					(volox) -- (tritium);
   \draw[->] 				(volox) -- (gas);
   \draw[->]					(volox) -- (actinide);
-  \draw[->]					(time) -- (volox);
+  \draw[-]					(time) -- (volox);
   \draw[->]					(volox) -- (temp);
-  \draw[->]					(oxidant) -- (volox);
+  \draw[-]					(oxidant) -- (volox);
   \draw[->]					(volox) -- ++(0,-2.5) node[midway] {U$_3$O$_8$};
-  \draw[->]					(vol) -- (volox);
-  \draw[->]					(flow) -- (volox);
+  \draw[-]					(vol) -- (volox);
+  \draw[-]					(flow) -- (volox);
   \end{tikzpicture}
 \end{document}
