--- a/refining.tex
+++ b/refining.tex
@@ -38,15 +38,15 @@
   \node (refine2)			[process, below of=refining, xshift=2cm, yshift=-2.25cm] {Electrorefining};
   
   
-  \draw[->]					(material.east) -- ++(0.25,0) --++(0,-1.25) -- (refining);;
+  \draw[-]					(material.east) -- ++(0.25,0) --++(0,-1.25) -- (refining);;
   \draw[->]					(refining) -- (temp+press);
   \draw[->]					(refining) -- (waste);
   \draw[->]					(refining) -- (power);
-  \draw[->]					(pressure) -- (refining);
-  \draw[->]					(temp.east) -- ++(0.25,0) --++(0,1.25) -- (refining);
-  \draw[->]					(rotation.east) -- ++(0.25,0) --++(0,2.5) -- (refining);
+  \draw[-]					(pressure) -- (refining);
+  \draw[-]					(temp.east) -- ++(0.25,0) --++(0,1.25) -- (refining);
+  \draw[-]					(rotation.east) -- ++(0.25,0) --++(0,2.5) -- (refining);
   \draw[->]					(refining) -- (fission);
-  \draw[->]					(vol.east) -- ++(0.5,0) --++(0,-2.5) -- (refining);
+  \draw[-]					(vol.east) -- ++(0.5,0) --++(0,-2.5) -- (refining);
   
   \draw[->]					(refining)++(0.75,-0.5) -- ++(0,-1) -- ++(0.75,0) -| (winning);
   \draw[->]					(refining)++(-1.5,-0.5) -- ++(0,-2)(salt distl) node[midway] {U + salt};
