--- a/winning.tex
+++ b/winning.tex
@@ -35,9 +35,9 @@
   \draw[->]					(winning) -- (fission);
   \draw[->] 				(winning) -- (cesium);
   \draw[->]					(winning) -- (power);
-  \draw[->]					(time) -- (winning);
-  \draw[->]					(current) -- (winning);
-  \draw[->]					(shroud) -- (winning);
+  \draw[-]					(time) -- (winning);
+  \draw[-]					(current) -- (winning);
+  \draw[-]					(shroud) -- (winning);
   %\draw[->]					(winning)++(-0.25,-0.5) -- ++(0,-1) -- ++(-1.75,0) node[midway] {U/TRU} -- (fuel);
   %\draw[->]					(winning) -- (refining) node[midway] {FP/Salt/U};
   \draw[->]					(winning) -- ++(0,-2) node[midway] {FP/Salt/U};
