deleted extra words from previous draft

--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -182,10 +182,8 @@ created of one separations facility with a feed of five year cooled spent LWR
 fuel at a burn-up of 45 \gls{GWd} per \gls{MTIHM} to 
 match results seen in \cite{flowsheet_1998}.
 
-A pyroprocessing facility can be modeled with the separations archetype at low fidelity 
-by a dedicated archetype. 
-The goal for PyRe is to include facility configuration parameters and 
-their respective effects on the efficiency table. 
+A pyroprocessing facility can be modeled with the separations archetype at low fidelity. 
+The goal for PyRe is to include facility configuration parameters and their respective effects on the efficiency table. 
 Any material not separated by the four processes is categorized as leftover commodity, ensuring material conservation is maintained. 
 A test will also be used to verify isotopic efficiencies add up to 1. 
 Efficiencies also vary according to the feed stream resulting in different waste streams for LWR and FR fuels, for example. 
