--- a/acros.tex
+++ b/acros.tex
@@ -134,6 +134,7 @@
 \newacronym{PWAR}{PWAR}{Pratt and Whitney Aircraft Reactor}
 \newacronym{PWR}{PWR}{Pressurized Water Reactor}
 \newacronym{PyNE}{PyNE}{Python toolkit for Nuclear Engineering}
+\newacronym{PyRe}{PyRe}{Pyroprocessing Repository}
 \newacronym{PyRK}{PyRK}{Python for Reactor Kinetics}
 \newacronym{QA}{QA}{quality assurance}
 \newacronym{RDD}{RD\&D}{Research Development and Demonstration}
